force-app/main/default/objects/Account/fields/Is_Internal__c.field-meta.xml
<CustomField>
    <fullName>Is_Internal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Internal?</label>
    <type>Checkbox</type>
</CustomField>