force-app/main/default/objects/Account/fields/Last_Opportunity_Boat_Id__c.field-meta.xml
<CustomField>
    <fullName>Last_Opportunity_Boat_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last Opportunity Boat Id</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Account Boats</relationshipLabel>
    <relationshipName>Account_Boats</relationshipName>
    <type>Lookup</type>
</CustomField>