force-app/main/default/objects/Account/fields/Last_Opportunity_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Opportunity_Delivery_Date__c</fullName>
    <label>Last Opportunity Delivery Date</label>
    <type>DateTime</type>
</CustomField>