force-app/main/default/objects/Account/fields/Legend_Gallery_Image__c.field-meta.xml
<CustomField>
    <fullName>Legend_Gallery_Image__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Legend Gallery Image</label>
    <referenceTo>Legend_Gallery_Image__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>