force-app/main/default/objects/Account/fields/Legend_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Legend_Start_Date__c</fullName>
    <description>This is the date the dealer became a Legend dealer and can be used to calculate how long they have been a Legend Dealer</description>
    <inlineHelpText>Date the dealer first became a Legend dealer</inlineHelpText>
    <label>Legend Start Date</label>
    <type>Date</type>
</CustomField>