force-app/main/default/objects/Account/fields/Market_Area_Notes__c.field-meta.xml
<CustomField>
    <fullName>Market_Area_Notes__c</fullName>
    <description>Description of the dealers local market</description>
    <label>Market Area Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>