force-app/main/default/objects/Account/fields/Marketing_Notes__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Notes__c</fullName>
    <description>Any additional notes regarding dealer&#39;s marketing campaigns</description>
    <label>Marketing Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>