force-app/main/default/objects/Account/fields/Motivation__c.field-meta.xml
<CustomField>
    <fullName>Motivation__c</fullName>
    <label>Motivation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>