force-app/main/default/objects/Account/fields/Number_of_Children__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Children__c</fullName>
    <description>Used to aid in Marketing Development and WOW Notes</description>
    <inlineHelpText>Enter the number of children the customer has to aid in Marketing Development and your WOW! Notes</inlineHelpText>
    <label>Number of Children</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>