force-app/main/default/objects/Account/fields/Payable_Instruction__c.field-meta.xml
<CustomField>
    <fullName>Payable_Instruction__c</fullName>
    <description>Notes used when creating a payable specific to a supplier, such as allocations to departments, etc. This note will appear on the vendors AP record.</description>
    <inlineHelpText>Notes used when creating a payable specific to a supplier, such as allocations to departments, etc. This note will appear on the vendors AP record.</inlineHelpText>
    <label>Payable Instruction</label>
    <type>TextArea</type>
</CustomField>