force-app/main/default/objects/Account/fields/Payment_Preference__c.field-meta.xml
<CustomField>
    <fullName>Payment_Preference__c</fullName>
    <description>Payment preference our vendors prefer us to use as well as preferred payment method of our dealers</description>
    <label>Payment Preference</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cheque</fullName>
            </value>
            <value>
                <fullName>Bill Payment</fullName>
            </value>
            <value>
                <fullName>Direct Deposit</fullName>
            </value>
            <value>
                <fullName>Wire Transfer</fullName>
            </value>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>Credit Card Auto Pay</fullName>
            </value>
            <value>
                <fullName>Direct Deposit Auto Pay</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>