force-app/main/default/objects/Account/fields/Payment_Timing__c.field-meta.xml
<CustomField>
    <fullName>Payment_Timing__c</fullName>
    <label>Payment Timing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>By Statement</fullName>
            </value>
            <value>
                <fullName>By Invoice</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>