force-app/main/default/objects/Account/fields/Personal_Notes__c.field-meta.xml
<CustomField>
    <fullName>Personal_Notes__c</fullName>
    <description>This field is for any information that may help you WOW! this contact in the future (i.e. How do they like their coffee, what are their kids names, remember they had an important event, etc)</description>
    <inlineHelpText>This field is for any information that may help you WOW! this contact in the future (i.e. How do they like their coffee, what are their kids names, remember they had an important event, etc)</inlineHelpText>
    <label>Personal Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>