force-app/main/default/objects/Account/fields/PersonMailingLatitudeText__c.field-meta.xml
<CustomField>
    <fullName>PersonMailingLatitudeText__c</fullName>
    <formula>TEXT(PersonMailingLatitude)</formula>
    <label>PersonMailingLatitudeText</label>
    <type>Text</type>
</CustomField>