force-app/main/default/objects/Account/fields/Pontoon_Brands_Offered__c.field-meta.xml
<CustomField>
    <fullName>Pontoon_Brands_Offered__c</fullName>
    <description>Selection of Poontoon Brands offered by the dealer</description>
    <label>Pontoon Brands Offered</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Bennington</fullName>
            </value>
            <value>
                <fullName>Crest</fullName>
            </value>
            <value>
                <fullName>Encore</fullName>
            </value>
            <value>
                <fullName>G3</fullName>
            </value>
            <value>
                <fullName>Legend</fullName>
            </value>
            <value>
                <fullName>Lowe</fullName>
            </value>
            <value>
                <fullName>Manitou</fullName>
            </value>
            <value>
                <fullName>Premiere</fullName>
            </value>
            <value>
                <fullName>Princecraft</fullName>
            </value>
            <value>
                <fullName>SouthBay</fullName>
            </value>
            <value>
                <fullName>Starcraft</fullName>
            </value>
            <value>
                <fullName>Sunchaser</fullName>
            </value>
            <value>
                <fullName>Sylvan</fullName>
            </value>
            <value>
                <fullName>Xcursion</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>