force-app/main/default/objects/Account/fields/Population_of_Immediate_Area__c.field-meta.xml
<CustomField>
    <fullName>Population_of_Immediate_Area__c</fullName>
    <label>Pop. of Immediate Area</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>