force-app/main/default/objects/Account/fields/Proximity_to_Water__c.field-meta.xml
<CustomField>
    <fullName>Proximity_to_Water__c</fullName>
    <label>Proximity to Water Access</label>
    <length>255</length>
    <type>Text</type>
</CustomField>