force-app/main/default/objects/Account/fields/Ready_to_Ship__c.field-meta.xml
<CustomField>
    <fullName>Ready_to_Ship__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If the order has been approved and the financing approval is in place then you can indicate this order is ready to ship.</description>
    <label>Ready to Ship</label>
    <type>Checkbox</type>
</CustomField>