force-app/main/default/objects/Account/fields/Relationship_Status__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Status__c</fullName>
    <description>Used to assist in Marketing Data as well as WOW information</description>
    <inlineHelpText>Let us know the relationship status of the customer to aid in our Marketing development</inlineHelpText>
    <label>Relationship Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Single</fullName>
            </value>
            <value>
                <fullName>In a Relationship</fullName>
            </value>
            <value>
                <fullName>Married</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>