force-app/main/default/objects/Account/fields/Service_Shop_Size__c.field-meta.xml
<CustomField>
    <fullName>Service_Shop_Size__c</fullName>
    <description>Size of dealer&#39;s service shop in square feet</description>
    <inlineHelpText>Size of dealer&#39;s service shop in square feet</inlineHelpText>
    <label>Service Shop Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>