force-app/main/default/objects/Account/fields/Shipping_Tools__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Tools__c</fullName>
    <description>Information regarding the dealers&#39; facilities for unloading</description>
    <label>Unloading Tools</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Forklift</fullName>
            </value>
            <value>
                <fullName>Fork Extensions</fullName>
            </value>
            <value>
                <fullName>Boom Truck Rental</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>