force-app/main/default/objects/Account/fields/Signage__c.field-meta.xml
<CustomField>
    <fullName>Signage__c</fullName>
    <label>Signage</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>