force-app/main/default/objects/Account/fields/Special_Delivery_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Special_Delivery_Instructions__c</fullName>
    <description>Add any unique instructions regarding delivery to this Dealer</description>
    <label>Special Delivery Instructions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>