force-app/main/default/objects/Account/fields/Teams_TAL__c.field-meta.xml
<CustomField>
    <fullName>Teams_TAL__c</fullName>
    <description>FORMAT (Teams) Text Area (Long)</description>
    <label>Teams</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>