force-app/main/default/objects/Account/fields/Total_Travel_Time_in_Days__c.field-meta.xml
<CustomField>
    <fullName>Total_Travel_Time_in_Days__c</fullName>
    <description>Number travel days required for return trip</description>
    <label>Total Travel Time in Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>