force-app/main/default/objects/Account/fields/Tow_Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Tow_Vehicle__c</fullName>
    <description>To aid in Marketing Development and WOW Notes</description>
    <inlineHelpText>Check the box indicating what your customer plans to tow their new boat with. This will aid in Marketing Development and your WOW! Notes</inlineHelpText>
    <label>Tow Vehicle</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Car</fullName>
            </value>
            <value>
                <fullName>Minivan</fullName>
            </value>
            <value>
                <fullName>Pick Up Truck</fullName>
            </value>
            <value>
                <fullName>SUV</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>