force-app/main/default/objects/Account/fields/Water_Access__c.field-meta.xml
<CustomField>
    <fullName>Water_Access__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates weather facility is located on the water or has access to water</description>
    <label>Water Access</label>
    <type>Checkbox</type>
</CustomField>