force-app/main/default/objects/Account/fields/Yard_Notes__c.field-meta.xml
<CustomField>
    <fullName>Yard_Notes__c</fullName>
    <label>Yard Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>