force-app/main/default/objects/Account/fields/Years_with_Legend__c.field-meta.xml
<CustomField>
    <fullName>Years_with_Legend__c</fullName>
    <description>Number of Years dealer has been a Legend Dealer</description>
    <formula>(Today() - Legend_Start_Date__c)/365</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Number of years a dealer has been a Legend Dealer</inlineHelpText>
    <label>Years with Legend</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>