force-app/main/default/objects/Account/recordTypes/GeoHack.recordType-meta.xml
<RecordType>
    <fullName>GeoHack</fullName>
    <active>true</active>
    <label>Geo Hack</label>
</RecordType>