force-app/main/default/objects/Account/validationRules/Billing_Info_Province_cannot_be_blank.validationRule-meta.xml
<ValidationRule>
    <fullName>Billing_Info_Province_cannot_be_blank</fullName>
    <active>false</active>
    <description>This is a request by Accounting as it can affect taxes.</description>
    <errorConditionFormula>AND(
OR (
ISBLANK(BillingState)))</errorConditionFormula>
    <errorMessage>Province must be selected under State</errorMessage>
</ValidationRule>