force-app/main/default/objects/Account/listViews/Customers_and_Vendors.listView-meta.xml
<ListView>
    <fullName>Customers_and_Vendors</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>AcctSeed__Accounting_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>AcctSeed__Accounting_Type__c</field>
        <operation>equals</operation>
        <value>Customer and Vendor</value>
    </filters>
    <label>Customers and Vendors</label>
    <language>en_US</language>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>